Fixed Overlaping of container and footer
Fixed Overlaping of container and footer with margins

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   max-width: 1000px;
   padding: 20px;
   box-sizing: border-box;
+  margin-bottom: 170px;
 }
 
 .subtitle {
